--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,7 @@
     "test": "node src/testRunner.js"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.700.0",
-    "@aws-sdk/client-kms": "^3.700.0",
-    "@aws-sdk/lib-dynamodb": "^3.700.0",
+    "@vercel/kv": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
